<resources>
    <string name="app_name">IlernaAuto_Bruno_Castro_V2</string>
    <string name="action_settings">Settings</string>

    <!-- recursos para loginLayout-->

    <string name="lab_usuario">Usuario</string>
    <string name="lab_password">Contraseña</string>
    <string name="edt_usuario"></string>
    <string name="edt_password"></string>
    <string name="chk_recordar">Recordar</string>
    <string name="bt_cancelar">CANCELAR</string>
    <string name="bt_enviar">ENVIAR</string>

    <!-- recurosos para compra venta -->

    <string name="bt_vender">VENDER</string>
    <string name="bt_comprar">COMPRAR</string>
    <string name="bt_mapa">MAPA</string>
    <string name="title_activity_compra_venta">CompraVenta</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- recursos para eleccionVehiculoLayout-->

    <string name="lab_precio"></string>
    <string name="bt_guardar">GUARDAR</string>
    <string name="chk_renault">RENAULT</string>
    <string name="chk_seat">SEAT</string>
    <string name="chk_hyundai">HYUNDAI</string>
    <string name="chk_skoda">SKODA</string>
    <string name="chk_opel">OPEL</string>
    <string name="chk_bmw">BMW</string>
    <string name="chk_VW">VW</string>
    <string name="chk_tata">TATA</string>
    <string name="chk_lotus">LOTUS</string>
    <string name="chk_mazda">MAZDA</string>
    <string name="title_activity_eleccion_vehiculo">EleccionVehiculo</string>

    <!-- recursos compraLayout-->

    <string name="edt_marca">Marca</string>
    <string name="edt_modelo">Modelo</string>
    <string name="rd_gasolina">Gasolina</string>
    <string name="rd_diesel">Diésel</string>
    <string name="title_activity_venta">Venta</string>

    <!-- recursos layout item_lista-->
    <string name="viewMarca"> Marca: </string>
    <string name="viewModelo">Modelo:</string>
    <string name="viewCombustible">Combustible:</string>
    <string name="viewAno">Año:</string>
    <string name="viewTienda">Tienda:</string>
    <string name="buttonComprar">Comprar</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="title_activity_maps">Map</string>

    <!--clave de api mpas-->



</resources>
