<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    >

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="231dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/viewMarca"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/textView"
                    android:layout_marginTop="71dp"
                    android:text="@string/viewModelo"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/textView"
                    android:layout_marginTop="110dp"
                    android:text="@string/viewCombustible"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/textView"
                    android:layout_marginTop="148dp"
                    android:text="@string/viewTienda"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/textView"
                    android:layout_marginTop="186dp"
                    android:text="@string/viewAno"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/viewInMarca"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView"
                    android:layout_toEndOf="@+id/textView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/viewInModelo"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_toEndOf="@+id/textView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/viewInCombustible"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/viewInAno"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView5"
                    android:layout_toEndOf="@+id/textView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/viewInTienda"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView4"
                    android:layout_toEndOf="@+id/textView"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/bt_comprar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="49dp"
                    android:text="@string/buttonComprar" />


            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>